--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,12 @@
-<html>
-    <head>
-        <title>Hyeonjun's blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="">Hyeonjun's blog</a></h1>
-        </div>
-            {% for post in posts %}
-            <div>
-                <p style="color:blue">published: {{ post.published_date }}</p>
-                <h1><a href="">{{ post.title }}</a></h1>
-                <p>{{ post.text|linebreaksbr }}</p>
-            </div>
-        {% endfor %}
-    </body>
-</html>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+<div class="post">
+    {% for post in posts %}
+    <div>
+        <p style="color:blue">published: {{ post.published_date }}</p>
+        <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+    {% endfor %}
+{% endblock %}
